четвертый коммит - LinkedList, исправление интерфейсов и мод