@@ -3,10 +3,12 @@ package manager;
 import task.*;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private List<Task> history = new ArrayList<>();
+    private final List<Task> history = new LinkedList<>();
+    private static final int MAX_HISTORY_SIZE = 10;
 
     @Override
     public List<Task> getHistory() {
@@ -15,9 +17,11 @@ public class InMemoryHistoryManager implements HistoryManager {
 
     @Override
     public void add(Task task) {
-        if(history.size() == 10) {
-            history.remove(0);
+        if (task != null) {
+            if (history.size() == MAX_HISTORY_SIZE) {
+                history.removeFirst();
+            }
+            history.add(task);
         }
-        history.add(task);
     }
 }
